fixed address wrap

--- a/main.css
+++ b/main.css
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: space-evenly;
 }
+
 /*bocx 1*/
 
 
@@ -24,7 +25,7 @@
 }
 
 .options {
- 
+
     height: 50px;
     width: 100px;
     background-image: url("amazon_logo.png");
@@ -52,7 +53,7 @@
 }
 
 .add-first {
-    font-size: 12px;
+    font-size: 11px;
     color: #ccc;
     margin-left: 1rem;
     margin-top: 5px;
@@ -60,6 +61,9 @@
 
 }
 
+.nowrap{
+    flex-wrap: wrap;
+}
 .add-sec p {
     font-size: 14px;
     margin-left: 1rem;
@@ -149,16 +153,16 @@
 
 
 /* box 4*/
-.account{
+.account {
     width: 130px;
     height: 50px;
     font: white;
     margin: 5px;
 }
 
-.account-1 p{
+.account-1 p {
     font-size: 12px;
-padding:5px 0px 0px 6px;
+    padding: 5px 0px 0px 6px;
 }
 
 .account-2 p {
@@ -168,86 +172,89 @@ padding:5px 0px 0px 6px;
 }
 
 /* box 5 */
- .return{
+.return {
     width: 80px;
     height: 50px;
     margin: 5px;
- }
+}
 
- .p-1{
+.p-1 {
     font-size: 12px;
-    padding:5px 0px 0px 6px;
- }
- .p-2{
+    padding: 5px 0px 0px 6px;
+}
+
+.p-2 {
     font-size: 14px;
     font-weight: bold;
     padding: 0 0 0 4px;
- }
+}
 
 
- /*box 6*/
+/*box 6*/
 
- .cart{
+.cart {
     width: 70px;
     height: 50px;
     display: flex;
     margin: 5px;
- }
+}
 
- .cart-icon{
- 
-    padding:5px 0px 0px 6px;
- }
+.cart-icon {
 
- .c-2{
-    margin-top:12px;
-  font-weight: bold;
- }
+    padding: 5px 0px 0px 6px;
+}
+
+.c-2 {
+    margin-top: 12px;
+    font-weight: bold;
+}
 
 
- /*below nav bar*/
+/*below nav bar*/
 
 .below-nav-bar {
     height: 40px;
     background-color: #232f3e;
     color: antiquewhite;
-  
 
-    
+
+
 }
- .nav-bar-elements {
-     width: 100%;
-     height: 40px;
-     display: flex;
- 
-   
- }
 
- .nav-bar-lists{
+.nav-bar-elements {
+    width: 100%;
+    height: 40px;
+    display: flex;
+
+
+}
+
+.nav-bar-lists {
     display: flex;
     justify-content: space-evenly;
     gap: 1rem;
     padding: 2px;
     margin: 2px;
- }
+}
 
- ul {
+ul {
     list-style: none;
 
- }
+}
 
- ul li{
+ul li {
     padding: 5px;
     font-size: 14px;
- }
+}
 
 
- ul li:first-child{
+ul li:first-child {
     font-weight: bold;
- }
- ul li:last-child{
+}
+
+ul li:last-child {
     margin-left: 43rem;
     font-weight: bold;
     padding: 1px;
     margin-top: 1px;
- }
+}
